--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,7 @@
     <select id="item_category" onchange="updateItemList()">
         <option value="none">Select a category</option>
         <option value="ammo">Ammo</option>
-        <option value="weapons">eapons</option>
+        <option value="weapons">Weapons</option>
         <option value="construction">Construction Items</option>
         <option value="attire">Attire</option>
         <option value="tools">Tools</option>
